# AstroPage

./: .gitignore  CLAUDE.md  DESIGN.md  Makefile  README.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: .dockerignore  .env.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Makefile  README.md  SECURITY.md  pyproject.toml
backend/agents/: base_agent.py  example_agent.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  canteen.py  dashboard.py  grades.py  homework.py  items.py  settings.py
backend/app/core/: config.py  logging.py  rate_limit.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  homework_draft.py  item.py  user.py
backend/app/schemas/: auth.py  canteen.py  dashboard.py  grades.py  homework.py  item.py  settings.py
backend/app/services/: ai_service.py  auth_service.py  canteen_service.py  dashboard_service.py  edupage_service.py  grades_service.py  homework_service.py  item_service.py
backend/scripts/: check_homework.py  eduapi.ipynb  hw.ipynb
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py  test_canteen.py  test_dashboard.py  test_grades.py  test_health.py  test_homework.py  test_settings.py
backend/tests/unit/: test_ai_service.py  test_canteen_service.py  test_edupage_service.py  test_grades_service.py  test_items.py
frontend/: index.html  nginx.conf  package-lock.json  package.json
(+18 files in other folders)
